--- a/index.html
+++ b/index.html
@@ -39,6 +39,213 @@
                 <div class="cycle"></div>
         </div>
     </div>
+
+    <!-- --------------1------------- -->
+    <div id="traveler" style="background-position: 50%;">
+        <div class="story">
+            <div class="cycle">
+            </div>
+
+        </div>
+    </div>
+<!-- ----------------------------------------------------- -->
+
+
+
+
+
+<!-- -------------------3------------------------- -->
+<div id="bg3" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+
+<!-- ------------------------------ -->
+
+<!-- --------------------------------4-------------------- -->
+<div id="bg4" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+<!-- --------------------------------5-------------------- -->
+<div id="bg5" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+
+<!-- --------------------------------6-------------------- -->
+<div id="bg6" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+
+
+<!-- --------------------------------7-------------------- -->
+<div id="bg7" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+
+
+
+<!-- --------------------------------8-------------------- -->
+<div id="bg8" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- --------------------------------9-------------------- -->
+<div id="bg9" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
     
+
+
+<!-- --------------------------------10-------------------- -->
+<div id="bg10" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- --------------------------------11-------------------- -->
+<div id="bg11" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- --------------------------------12-------------------- -->
+<div id="bg12" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- --------------------------------13-------------------- -->
+<div id="bg13" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- -------------------------------14------------------- -->
+<div id="bg14" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+<!-- --------------------------------15-------------------- -->
+<div id="bg15" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- --------------------------------16-------------------- -->
+<div id="bg16" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- --------------------------------17-------------------- -->
+<div id="bg17" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+<!-- ------------------------------18------------------ -->
+<div id="bg18" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+<!-- ------------------------------19------------------ -->
+<div id="bg19" style="background-position: 50%;">
+    <div class="story">
+        <div class="cycle">
+        </div>
+
+    </div>
+</div>
+<!-- --------------------------------------------------- -->
+
+
+
+
  </body>
  </html>
