update regarding footer

--- a/index.html
+++ b/index.html
@@ -396,9 +396,10 @@
 
     <!-- ------------------------------19------------------ -->
     <div id="bg19" style="background-position: 50%">
-      <div class="story">
-        <div class="cycle"></div>
-      </div>
+      <div class="col"><h1 id="footerh1">HEY! <br> YOU ENJOYED IT?</h1> <br>
+        <hr></div>
+           <div class="col"></div>
+        
     </div>
     <!-- --------------------------------------------------- -->
   </body>
